Fixed an error on the Hero's Carousel that showed the slides misaligned on the vertical axis

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,11 +19,6 @@
 }
 
 /* ---- GENERAL ---- */
-body {
-  background-image: url("../layout_reference.jpg");
-  background-size: calc(100vw - 18px);
-}
-
 button {
   background-color: transparent;
   border-radius: 5px;
@@ -262,12 +257,18 @@ button {
   background-color: var(--theme-blue-d);
   display: flex;
   filter: brightness(0.45);
+  height: 100%;
   overflow: hidden;
   position: absolute;
   right: 0;
   top: 0;
   width: 100%;
   z-index: 1;
+}
+
+#hero-carousel .carousel-inner {
+  display: flex;
+  align-items: center;
 }
 /* -- HERO ↑↑ -- */
 /* -- ORADORES ↓↓ -- */
@@ -369,11 +370,13 @@ button {
   display: none;
 }
 
-.carousel-inner { /* overwrites Boostrap default configuration */
+/* overwrites Boostrap default configuration */
+#carousel-container .carousel-inner { 
   align-items: end;
   display: flex;
 }
-.carousel-item.active { /* overwrites Boostrap default configuration */
+/* overwrites Boostrap default configuration */
+#carousel-container .carousel-item.active { 
   display: flex;
 }
 
